--- a/packages/client/src/styles/global.scss
+++ b/packages/client/src/styles/global.scss
@@ -22,7 +22,7 @@ html, body {
   justify-content: center;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 666px;
+  max-width: 1280px;
 }
 
 .page {
@@ -31,111 +31,66 @@ html, body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
-  &--config {
-    margin: 3rem auto;
-  }
-
-  &--pie {
-    height: 100vh;
-  }
 }
 
 .header {
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0.625rem 0.625rem 0.625rem 0;
   margin: 2rem auto;
   position: relative;
 
   h1 {
-    width: 36.75rem;
-    border: 1px solid lighten($color-black, 10);
     padding: 0.75rem;
-    margin: 0;
-  }
-
-  .btn {
-    margin-left: auto;
+    margin: 0 auto;
   }
 }
 
-.slices {
-  width: 100%;
-}
-
-.slice {
+.content {
   width: 100%;
   display: flex;
-  align-items: center;
-  position: relative;
 
-  .input {
-    padding: 0.75rem;
-    border-left: 1px solid lighten($color-black, 10);
-    border-top: 1px solid lighten($color-black, 10);
-
-    &:last-of-type {
-      border-right: 1px solid lighten($color-black, 10);
-    }
+  &__sections,
+  &__previews {
+    margin: 1rem 1rem 5rem;
+    width: 50%;
+    border: 1px solid lighten($color-black, 10);
   }
 
-  &:last-of-type {
-    .input {
-      border-bottom: 1px solid lighten($color-black, 10);
-    }
-  }
-
-  .btn {
-    position: absolute;
-    right: 0.625rem;
+  &__section,
+  &__preview {
+    margin-bottom: 1rem;
+    padding: 1.5rem; 
+    border-bottom: 1px solid lighten($color-black, 10);
   }
 }
 
+
 .input {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+
   &__label {
-    margin-bottom: 0.625rem;
+    width: 5rem;
+    text-align: right;
+    margin-right: 0.75rem;
   }
 
   &__field {
+    width: auto;
     height: 3rem;
     border-radius: 0.375rem;
     padding: 0.5rem;
     font-family: monospace;
     outline: none;
     border: 2px solid transparent;
+    min-width: 20rem;
 
     &:focus {
       border: 2px solid $color-blue;
-    }
-  }
-  
-  &--label {
-    .input__field {
-      width: 20rem;
-    }
-  }
-
-  &--color {
-    .input__field {
-      width: 8rem;
-      position: relative;
-      display: flex;
-      align-items: center;
-
-      .block-picker {
-        position: absolute !important;
-        left: -1.5rem;
-        top: 4rem;
-        z-index: 1000;
-      }
-    }
-  }
-
-  &--percent {
-    .input__field {
-      width: 4rem;
     }
   }
 }
@@ -162,16 +117,15 @@ html, body {
   }
 
   &--submit {
-    width: 4rem;
     height: 3rem;
     border-radius: 0.375rem;
-    padding: 0.5rem;
+    padding: 0.75rem 1.5rem;
     font-family: monospace;
     outline: none;
     border: 2px solid transparent;
     
     background: $color-blue;
-    margin: 0.75rem 0.75rem 0.75rem 32rem;
+    margin: 0 1.5rem 0 0;
     align-self: flex-start;
     justify-content: center;
 
@@ -182,44 +136,7 @@ html, body {
   }
 }
 
-.svg-wrapper {
-  padding: 1rem;
-  box-sizing: content-box;
-
-  &--light-mode {
-    background: $color-white;
-    color: $color-black;
-  }
-
-  &--dark-mode {
-    background: $color-black;
-    color: $color-white;
-  }
+textarea {
+  width: 100%;
 }
-
-.labels {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem auto 0;
-
-  .label {
-    margin: 0.625rem 0.625rem 0 0.625rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    &__dot {
-      width: 1rem;
-      height: 1rem;
-      border-radius: 50%;
-    }
-
-    &__text {
-      margin: 0 0 0 0.625rem;
-    }
-  }
-}
-
 
