--- a/packages/client/src/styles/global.scss
+++ b/packages/client/src/styles/global.scss
@@ -116,7 +116,8 @@ html, body {
     }
   }
 
-  &--submit {
+  &--submit,
+  &--link {
     height: 3rem;
     border-radius: 0.375rem;
     padding: 0.75rem 1.5rem;
